<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/leaderBadgeImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/toplearner"
            android:contentDescription="@string/img_content"
            android:padding="10dp"/>

        <LinearLayout
            android:layout_toRightOf="@id/leaderBadgeImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/leaderBadgeImageView"
            android:padding="8dp">

            <TextView
                android:id="@+id/leadersName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textStyle="bold"
                android:textColor="@color/colorBlack" />

            <TextView
                android:id="@+id/leadersRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_remaining"
                android:layout_marginTop="5dp" />

        </LinearLayout>



    </RelativeLayout>

</androidx.cardview.widget.CardView>